# uk-salary-sacrifice-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml
docs/: distributional-impact.html  index.html  revenue-by-year.html
src/salary_sacrifice/: __init__.py  analysis.py  cli.py  reforms.py
tests/: __init__.py  test_reforms.py
