[project]
name = "uk-salary-sacrifice-analysis"
version = "0.1.0"
description = "Analysis of UK salary sacrifice pension cap policy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "policyengine-uk>=2.59.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ss-analysis = "salary_sacrifice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/salary_sacrifice"]

[tool.hatch.build.targets.wheel]
packages = ["src/salary_sacrifice"]
sources = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
